# rust-multi-table-csv

./: Cargo.toml  LICENSE  README.md
documents/: example.csv  example2.csv
src/: main.rs  types.rs
