[package]
name = "multi-table-csv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# csv = "1.3.0"
# Using code from this pull request to provide the "skip_blank_lines"
# option on the ReaderBuilder... 
# https://github.com/BurntSushi/rust-csv/pull/308
csv = { git = "https://github.com/BurntSushi/rust-csv.git", rev = "3886a1b"}

serde = { version = "1.0.203", features = ["derive"] }
